random bis + tests + CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
-project(Gillespie)
+project(Neuron network)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)
@@ -12,7 +12,7 @@ option(test "Build tests." ON)
 include_directories("/usr/local/include" ${CMAKE_SOURCE_DIR}/include)
 link_directories(${CMAKE_SOURCE_DIR}/lib)
 
-add_executable(main src/main.cpp)
+add_executable(main src/main.cpp src/random.cpp)
 if (test)
   enable_testing()
   find_package(GTest)
@@ -21,7 +21,7 @@ if (test)
     set(GTEST_BOTH_LIBRARIES libgtest.a libgtest_main.a)
   endif(NOT GTEST_FOUND)
   include_directories(${GTEST_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/test)
-  add_executable (Test test/main.cpp)
+  add_executable (Test test/main.cpp src/random.cpp)
   target_link_libraries(Test ${GTEST_BOTH_LIBRARIES} pthread)
   add_test(main_Test Test)
 endif(test)
